rename the outline view to attributes view

--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -125,7 +125,6 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="fZm-TB-kfy" id="Y4L-tX-zfk">
-                                                    <rect key="frame" x="0.0" y="0.0" width="238" height="134"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -280,9 +279,9 @@
                                                                             </textFieldCell>
                                                                             <connections>
                                                                                 <binding destination="M03-u6-Cp5" name="toolTip" keyPath="objectValue.description" id="Hbg-Q6-lM2"/>
-                                                                                <binding destination="M03-u6-Cp5" name="value" keyPath="objectValue.name" id="5Rn-gn-EYj">
+                                                                                <binding destination="M03-u6-Cp5" name="value" keyPath="objectValue.name" id="k0Q-j6-TCO">
                                                                                     <dictionary key="options">
-                                                                                        <string key="NSValueTransformerName">AttibuteNameTransformer</string>
+                                                                                        <string key="NSValueTransformerName">AttributeNameTransformer</string>
                                                                                     </dictionary>
                                                                                 </binding>
                                                                             </connections>
@@ -310,9 +309,9 @@
                                                                             </textFieldCell>
                                                                             <connections>
                                                                                 <binding destination="v2I-yi-2VH" name="toolTip" keyPath="objectValue.description" id="Pdq-OO-hD3"/>
-                                                                                <binding destination="v2I-yi-2VH" name="value" keyPath="objectValue.name" id="M73-1v-8Su">
+                                                                                <binding destination="v2I-yi-2VH" name="value" keyPath="objectValue.name" id="Fdq-XX-kva">
                                                                                     <dictionary key="options">
-                                                                                        <string key="NSValueTransformerName">AttibuteNameTransformer</string>
+                                                                                        <string key="NSValueTransformerName">AttributeNameTransformer</string>
                                                                                     </dictionary>
                                                                                 </binding>
                                                                             </connections>
@@ -427,8 +426,8 @@
         </window>
         <customObject id="494" customClass="AppDelegate">
             <connections>
+                <outlet property="_attributesView" destination="zW2-BO-taF" id="19t-eI-oFU"/>
                 <outlet property="_editorView" destination="suo-YO-fqM" id="D5W-Hu-pTw"/>
-                <outlet property="_outlineView" destination="zW2-BO-taF" id="ZDW-sD-41y"/>
                 <outlet property="_treeController" destination="IEK-xe-ugr" id="TYh-UN-I2P"/>
                 <outlet property="skView" destination="BAm-0B-vb9" id="MCo-T6-F5E"/>
                 <outlet property="window" destination="371" id="532"/>
